# cndctl

./: .env  .gitignore  README.md  cndctl.py  dreamkast.py  example.json  mediasource.py  pyproject.toml  recording.py  requirements.txt  scene.py  scenecollection.py  setup.cfg  source.py  streaming.py  text.py
.github/workflows/: ci.yml  flake8.yml
cndctl/: Dreamkast.py  MediaSource.py  Nextcloud.py  Operator.py  Scene.py  Source.py  Switcher.py  __init__.py  __main__.py  cli.py  cndctl.py  dreamkast.py  recording.py  scenecollection.py  text.py
cndctl/obsbuilder/: cndt2022.json  dreamkast.py  obs.py  obsbuilder.py  source_collection.json  talks_cndt2022.json
obsbuilder/: obsbuilder.py
tests/: test.py  test_dreamkast.py
