[tool.poetry]
name = "emtec"
version = "0.1.0"
description = "command line tool for emtec"
authors = ["tkc66 <worktkc2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pyjwt = {version = "2.4.0", allow-prereleases = true}
requests = {version = "2.28.2", allow-prereleases = true}
simpleobsws = {version = "1.3.1", allow-prereleases = true}
nextcloud-api-wrapper = {version = "0.2.3", allow-prereleases = true}
flake8 = {version = "6.0.0", allow-prereleases = true}
pytest = {version = "7.2.2", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
